--- a/README
+++ b/README
@@ -39,10 +39,11 @@ Reaping - The Runk, Xandirs, DM*, BulletMorgue, Sakumaru, Fang.HD, AnTrix
 Change Log:
 
 Version 1.3
-+ Siren scream will hit through doors.  The damage dealt is only 50% of 
-the normal damage
++ When the Siren is attacking a door, her scream will hit through all 
+objects such as walls and the door.  The damage dealt is only 50% of 
+the normal damage.
 + Scrake can only be stunned (actual stun, not flinch) once.  In addition, 
-he will immediately break out of stun if he is hit with weak attack
+he will immediately break out of stun if he is hit with weak attack.
 
 Version 1.2
 + Gorefast will always do the charging melee attack.  The minimum range 
